# LinkC

./: ..gitignore.un~  .gitignore  .gitignore~  .gitmodules  .travis.yml  .~lock.database-template.ods#  Makefile  README.md  ReadMe.md  basic_package.md  database-template.ods  gurgle_redesign.md
.ropeproject/: globalnames
Docs/: 01.class_gurgle.md
LinkC-wp-build-0.1/: README.md
LinkC-wp-build-0.1/LinkC/: LinkC.sln
NewClient/: Makefile  NewClient.pro  README  ReadMe.md  moc_chatdialog.cpp  moc_friendslist.cpp  moc_linkc_socket.cpp  moc_loginwindow.cpp  moc_mainwindow.cpp  ui_loginwindow.h  ui_mainwindow.h
NewClient/include/: linkc_basic_network.h  linkc_client.h  linkc_client_nonui.h  linkc_curses_error.h  linkc_def.h  linkc_error.h  linkc_package.h  linkc_package_ctl.h  linkc_server.h  linkc_socket.h
NewClient/src/: main.c  main.cpp
NewServer/: CMakeLists.txt  README  ReadMe.md
NewServer/data/: friend.db  user.db  user.db-journal
NewServer/include/: ReadMe.md  linkc_db.h  linkc_def.h  linkc_error.h  linkc_p2p.h  linkc_p2p_helper.h  linkc_p2p_list.h  linkc_package.h  linkc_package_ctl.h  linkc_server.h
NewServer/src/: CMakeLists.txt  Makefile  ReadMe.md  Server  main.c
NewServer/src/core/: ReadMe.md  linkc_server.c
NewServer/src/db/: linkc_db.c
NewServer/src/error/: ReadMe.md  linkc_error.c
NewServer/src/network/: ReadMe.md  netowrk.c  network.c
NewServer/src/network/linkc_TCP_system/: ReadMe.md  linkc_TCP_io.c
NewServer/src/network/linkc_UDP_system/: ReadMe.md  linkc_network_UDP_system.c
NewServer/src/network/p2p/: ReadMe.md  conn_list.c  list.c  p2p_helper.c
NewServer/src/network/package/: ReadMe.md  package_ctl.c
NewServer/src/network/package/package_list/: ReadMe.md  package_list.c
PyLinkC/: Client.py  ReadMe.md  StartService.py
PyLinkC/core/: serviceMain.py
PyLinkC/database/: ReadMe.md  database.py  grgl_mysql.py  mysql.py
PyLinkC/protocol/: .gurgle.py.swp  Gurgle.py  def.py  gurgle.py
TestingServer/: ReadMe.md
server/: Build-dep  LinkC_Server  LinkC_Server.depend  Makefile  Makefile.am  Makefile.in  README  autoclean.sh  config.status  configure  configure.ac  friend.db  main.c  test  test.c  user.db
server/.deps/: Server-main.Po  main.Po
server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
server/db_ctl/: Makefile  linkc_db.c
server/include/: .linkc_network_protocol.h.swp  .utilities.h.swp  01.tar  LinkC_Def.h  README  conn_list.h  def.h  linkc_db.h  linkc_network.h  linkc_network_protocol.h  linkc_qmsg.h  linkc_types.h  linkc_user.h  linkc_utilities.h  list.h  p2p_helper.h  server_data_type.h  test  test.c  utilities.h
server/list/: Makefile  list.c
server/network/: Makefile  init_network.c  keep_connect.c  keep_connect.c~  keep_connect_new.c  start_connect.c
server/p2p/: Makefile  conn_list.c  list.c  main.c  p2p_helper.c  test
server/qmsg/: qmsg_recv.c
server/src/: Makefile  Makefile.am  Makefile.in  main.c
server/src/.deps/: main.Po
server/src/network/: Makefile  Makefile.am  Makefile.in  README  init_network.c  keep_connect.c  keep_connect.c~
server/src/network/.deps/: init_network.Po  keep_connect.Po  libConnect_a-init_network.Po  libConnect_a-keep_connect.Po
server/src/network/network_protocol/: Makefile  Makefile.am  Makefile.in  README  basic_network_io.c  package_control.c  send_friends_data.c
server/src/network/network_protocol/.deps/: basic_network_io.Po  libLinkCProtocol_a-basic_network_io.Po  libLinkCProtocol_a-package_control.Po  libLinkCProtocol_a-send_friends_data.Po  package_control.Po
server/src/network/p2p/: Makefile  Makefile.am  Makefile.in  p2p_helper.c
server/src/network/p2p/.deps/: libP2P_a-p2p_helper.Po  p2p_helper.Po
server/src/utilities/: Makefile  Makefile.am  Makefile.in
server/src/utilities/db_ctl/: Makefile  Makefile.am  Makefile.in  README  linkc_db.c
server/src/utilities/db_ctl/.deps/: libDb_a-linkc_db.Po  linkc_db.Po
server/src/utilities/list/: Makefile  Makefile.am  Makefile.in  README  conn_list.c  list.c
server/src/utilities/list/.deps/: conn_list.Po  libList_a-conn_list.Po  libList_a-list.Po  list.Po
server/src/utilities/network_protocol/: Makefile  Makefile.am  Makefile.in  basic_network_io.c  basic_network_io.c~  package_control.c~  send_friends_data.c
server/src/utilities/network_protocol/.deps/: send_friends_data.Po
server/src/utilities/user/: Makefile  Makefile.am  Makefile.in  README  basic_user_control.c
server/src/utilities/user/.deps/: basic_user_control.Po  libUser_a-basic_user_control.Po
server/user/: Makefile  chat_with.c  user_login.c  user_logout.c
server/utilities/: Makefile  message_control.c  network.c  packet_control.c
testing/: .testing_ui.c.swp  Makefile  ReadMe  conn_list.h  def.h  list.h  peer_client_test  peer_client_test.c  testing_ui.c
testing/ConfigFileCtl/: ConfigFileCtl.h  Example.conf  ReadConfigFile.c  ReadLine.c  ReadMe  TIPS  re_cfg.c  re_cfg.h  readline.c  test.c
testing/NextLinkCProtocol/: ReadMe
testing/OSTest/: test  test.c
testing/OldTestingClient/: Build-dep  Makefile  peer_client_test.c
user/: AUTHORS  Build-dep  LinkC_Cilent.pro  LinkC_Client  LinkC_Client.pro  LinkC_Clinet.pro  Makefile  README  ReadMe.md  main.cpp  moc_Friend.cpp  moc_HeartBeats.cpp  moc_LinkC_GUI.cpp  moc_LinkC_Label.cpp  moc_LinkC_Settings_Dialog.cpp  moc_LinkC_UserInfoSettings_Dialog.cpp  moc_MainWindow.cpp  moc_MessageBox.cpp  moc_MessageRecver.cpp  moc_p2p_client.cpp
user/Def/: LinkC_Def.h  LinkC_Error.cpp  LinkC_Error.h
user/Gui/: ChatDialog.cpp  Friend.cpp  LinkC_Label.cpp  LinkC_Settings_Dialog.cpp  LinkC_UserInfoSettings_Dialog.cpp  MessageBox.cpp  SetupMenu.cpp
user/LCUDP/: README  SSLTest.c  test2.c
user/NetWork/: Csocket.cpp  Csocket.h  HeartBeats.cpp  HeartBeats.h  LinkC_Package_Ctl.cpp  MessageRecver.cpp  MessageRecver.h  NetWork.pro  csocket.cpp  csocket.h  p2p_client.cpp  p2p_client.h
user/Package/: Package.h  PackageCtl.cpp  PackageCtl.h
user/Protocol/: LinkC_NetWorkProtocol.cpp  LinkC_NetWorkProtocol.h
user/Utilities/: LinkC_Debug.cpp  LinkC_Utilities.h
(+90 files in other folders)
